# core

./: .gitignore  TODO  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
src/core/: settings.py
src/core/db/: session.py
src/core/db/alembic/: env.py
src/core/db/alembic/versions/: 7e2193d94fa6_.py
src/core/db/orm_models/: __init__.py  base.py  test.py
src/core/db/repositiories/: base_repository.py
src/core/enums/: for_orm_model.py
src/core/grpc_server/: grpc_servicer.py  interceptors.py  map_proto_to_model.py  server.py
src/core/grpc_server/proto/: core.proto  core_pb2.py  core_pb2.pyi  core_pb2_grpc.py  core_service.proto  core_service_pb2.py  core_service_pb2.pyi  core_service_pb2_grpc.py  service.proto
src/core/models/: test.py
tests/: __init__.py  conftest.py
tests/integrarion_tests/: test_dummy.py
tests/unitests/: test_func_scope.py  test_session_scope.py
